change venda to vendas

--- a/js/index.html
+++ b/js/index.html
@@ -19,7 +19,7 @@
             <div class="menu-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Venda</a></li>
+                    <li><a href="#">Vendas</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
